Fix some backend bug and introduce not booked students feature
