# EFlow.Booking/Presentation/EFlow.Booking.WebApi/Controllers/BookingsController.cs
@@ -1,7 +1,9 @@
 using System.Security.Claims;
 using EFlow.Booking.Application.BookingRecords.Commands;
 using EFlow.Booking.Application.BookingRecords.Queries;
+using EFlow.Booking.Application.BookingRecords.Queries.GetNotBookedStudents;
 using EFlow.Booking.Contracts.BookingRecords;
+using EFlow.Booking.Contracts.Students;
 using EFlow.Booking.Domain;
 using EFlow.Booking.WebApi.Contracts.Bookings;
 using EFlow.Booking.WebApi.Extensions;
@@ -112,6 +114,19 @@ public class BookingsController(ISender sender) : ControllerBase
             result.Errors[0].ToProblemDetails() :
             Ok(result.Value);
     }
+    
+    [HttpGet("{slotId:guid}/not-booked-students")]
+    [Authorize(Roles = $"{Identity.Roles.Admin},{Identity.Roles.Teacher}")]
+    [ProducesResponseType(typeof(NotBookedStudentsView), StatusCodes.Status200OK)]
+    public async Task<IActionResult> GetNotBookedStudentsForSlot(Guid slotId, CancellationToken cancellationToken)
+    {
+        var result = await sender.Send(new GetNotBookedStudentsQuery { SlotId = slotId }, cancellationToken);
+
+        return result.IsFailed ?
+            result.Errors[0].ToProblemDetails() :
+            Ok(result.Value);
+    }
+
 
     [HttpDelete("{id:guid}")]
     [Authorize(Roles = $"{Identity.Roles.Admin},{Identity.Roles.Student}")]
